--- a/OrEyni.Site/Client/src/index.html
+++ b/OrEyni.Site/Client/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<html lang="en">
-  
+<link href="" <html lang="en">
+
 <head>
 
   <meta charset="utf-8">
@@ -10,7 +10,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
   <app-root dir="rtl"></app-root>
 </body>
+
 </html>
